cmake_minimum_required(VERSION 3.29)
project(Zayas_Oscar_Examen)

set(CMAKE_CXX_STANDARD 20)

add_executable(Zayas_Oscar_Examen main.cpp
        Numero_Analisis.cpp
        Numero_Analisis.h
        Dia_Semana.cpp
        Dia_Semana.h
        Promedio.cpp
        Promedio.h
        Promocion.cpp
        Promocion.h)
